--- a/src/components/small-weather.css
+++ b/src/components/small-weather.css
@@ -11,6 +11,6 @@
 }
 
 .card--content {
-    min-width: 12%;
+    min-width: 115px;
     margin:1%;
 }
